client/src/styles/Variation.module.scss
@import "variables";

.part {
  display: flex;
  justify-content: flex-start;
  align-items: center;
  min-width: fit-content;
  white-space: nowrap;

  font: {
    family: "Sarabun", sans-serif;
    weight: 300;
    size: 22px;
  }
  letter-spacing: normal;

  input {
    max-width: 10em;
    background-color: transparent;
    color: $text;
    border: none;
    border-bottom: solid 3px $primary;

    &:focus {
      outline: none;
    }
  }

  input[type="number"]::-webkit-inner-spin-button, 
  input[type="number"]::-webkit-outer-spin-button {
      -webkit-appearance: none;
      margin: 0;
  }
  
  input[type="number"] {
      appearance: textfield;
      -moz-appearance: textfield;
  }

  > span {
    white-space: pre;
  }
}

.variationName {
  font-style: italic;
  padding-right: 40px;
}

.delete {
  display: flex;
  width: 40px;
  height: 40px;
  align-items: center;
  background-color: transparent;
  border: none;
  border-radius: 100px;
  cursor: pointer;

  .icon {
    padding-right: 0px;
  }

  &:hover {
    background-color: $primary-translucent;
  }
}

.icon {
  display: block;
  padding-right: 7px;
  color: $primary;
  width: auto;
}

.graphBtn {
  display: flex;
  width: 40px;
  height: 40px;
  align-items: center;
  justify-content: center;
  background-color: transparent;
  border: none;
  border-radius: 100px;
  cursor: pointer;
  color: $primary;

  &:hover {
    background-color: $primary-translucent;
  }

  .icon {
    padding-right: 0px;
  }
}

.noRemove {
  display: flex;
  width: 40px;
  height: 40px;
  align-items: center;
  background-color: transparent;
  border: none;
  border-radius: 100px;
}

